--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,9 +13,14 @@
     "@react-three/drei": "^10.5.0",
     "@react-three/fiber": "^9.2.0",
     "@tailwindcss/vite": "^4.1.11",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
+    "pdfkit": "^0.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.6.3",
     "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.11",
